gcc/testsuite/rust/rustc/ui/issues/issue-70381.rs
// Test that multi-byte unicode characters with missing parameters do not ICE.

fn main() {
  println!("\rยก{}")
// { dg-error "" "" { target *-*-* } .-1 }
}

